# msprites2

./: .gitignore  CLAUDE.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  benchmark_performance.py  benchmark_realistic.py  pyproject.toml  setup.py
.claude/agents/: readme-expert.md
.github/workflows/: test.yml
msprites2/: __init__.py  audio_transcription.py  enhancers.py  montage_sprites.py  parallel_extractor.py  settings.py  visual_analysis.py
tests/: conftest.py  test_audio_transcription.py  test_imports.py  test_integration.py  test_integration_local.py  test_montage_sprites.py  test_parallel_extractor.py  test_settings.py  test_visual_analysis.py
tests/fixtures/: download_test_videos.py
