[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msprites2"
version = "0.9.1"
description = "Create thumbnail spritesheet and webvtt from video files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ryan Malloy", email = "ryan@supported.systems" },
]
maintainers = [
    { name = "Ryan Malloy", email = "ryan@supported.systems" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["video", "thumbnails", "sprites", "webvtt", "ffmpeg", "imagemagick"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/rsp2k/msprites2"
Repository = "https://github.com/rsp2k/msprites2.git"
Issues = "https://github.com/rsp2k/msprites2/issues"
Changelog = "https://github.com/rsp2k/msprites2/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "msprites2/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["msprites2"]

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
minversion = "7.0"

# Coverage configuration
[tool.coverage.run]
source = ["msprites2"]
omit = [
    "tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false